--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     margin: 0;
     box-sizing: border-box;
 }
+.points-input-page{
+    display: none;
+}
 .main-container{
     display: flex;
     flex-direction: column;
@@ -34,4 +37,7 @@
 }
 .confirm-btn{
     display: none;
+}
+.transformations-page{
+    display: block;
 }
